2010-10-19  Prof. MAAD  <himself@prof-maad.org>

Reviewed by Xan Lopez.

        [GTK] Correct erroneous documentation for webkit_web_navigation_action_get_button()
        https://bugs.webkit.org/show_bug.cgi?id=46723

        * WebKit/gtk/webkit/webkitwebnavigationaction.cpp:

Canonical link: https://commits.webkit.org/60600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70035 268f45cc-cd09-0410-ab3c-d52691b4dbfc