WebKit/gtk/webkit/webkitwebnavigationaction.cpp
@@ -177,8 +177,8 @@ static void webkit_web_navigation_action_class_init(WebKitWebNavigationActionCla
     /**
      * WebKitWebNavigationAction:button:
      *
-     * The DOM identifier for the mouse button used to click. DOM button values
-     * are 0, 1 and 2 for left, middle and right buttons. If the action was not
+     * The GTK+ identifier for the mouse button used to click. Notice that GTK+ button values
+     * are 1, 2 and 3 for left, middle and right buttons, so they are DOM button values +1. If the action was not
      * initiated by a mouse click the value will be -1.
      *
      * Since: 1.0.3
@@ -310,9 +310,9 @@ void webkit_web_navigation_action_set_original_uri(WebKitWebNavigationAction* na
  * webkit_web_navigation_action_get_button:
  * @navigationAction: a #WebKitWebNavigationAction
  *
- * Returns the DOM identifier for the mouse button used to click.
- * DOM button values are 0, 1 and 2 for left, middle and right buttons.
- * If the action was not initiated by a mouse click, returns -1.
+ * The GTK+ identifier for the mouse button used to click. Notice that GTK+ button values
+ * are 1, 2 and 3 for left, middle and right buttons, so they are DOM button values +1. If the action was not
+ * initiated by a mouse click the value will be -1.
  *
  * Return value: the mouse button used to click
  *
